# bsck

./: .gitignore  Cargo.toml  Dockerfile  README.md  bench.sh  bsck.code-workspace  bsck.go  bsck_test.go  bsrouter.json  build.sh  channel.go  console.go  console_test.go  forward.go  forward_test.go  go.mod  go.sum  install.sh  ip.txt  log.go  proxy.go  proxy_test.go  router.go  router_test.go  service.go  service_test.go  socks5.go  socks5_test.go  sync.sh  test-caller.json  test-master.json  test-slaver.json  test.sh  util.go
app/: bsrouter.json  hk.json  pubspec.yaml
app/android/: build.gradle
app/bsrouter/: PacketTunnelProvider.swift  bsrouter.go  bsrouter_test.go  build.sh  device.go  gateway.go  gfw.go  (+2 more)
bind/: Cargo.toml
bind/src/: lib.rs  router.h
bsbench/: bsbench.go  log.go
bsconsole/: bs-scp.sh  bs-sftp.sh  bs-ssh.sh  bsconsole.go  bsconsole_test.go  script.go
bsrouter/: Cargo.toml  bsrouter-conf.bat  bsrouter-install.bat  bsrouter-install.sh  bsrouter-uninstall.bat  bsrouter.go  bsrouter.json  bsrouter.service  create-cert.bat  create-cert.sh  default-bsrouter.json  log.go  pkg.bat  pkg.sh  test.json
bsrouter/examples/: gwtun.rs  gwtun.sh  gwudp.rs  tunsend.rs
bsrouter/gui/: .gitignore  README.md  angular.json  build.sh  icon.icns  main.ts  package-lock.json  package.json  pkg.sh  tsconfig.json
bsrouter/gui/conf/: default.json
bsrouter/gui/e2e/src/: app.e2e-spec.ts
bsrouter/gui/src/: index.html  styles.scss  tsconfig.app.json  tsconfig.json  tsconfig.spec.json
bsrouter/gui/src/app/: app.component.css  app.component.html  app.component.spec.ts  app.component.ts  app.module.ts  bsrouter.service.spec.ts  bsrouter.service.ts  bsrouter.testdata.ts
bsrouter/gui/src/app/basic/: basic.component.css  basic.component.html  basic.component.spec.ts  basic.component.ts
bsrouter/gui/src/app/channels/: channels.component.css  channels.component.html  channels.component.spec.ts  channels.component.ts
bsrouter/gui/src/app/forwards/: forwards.component.css  forwards.component.html  forwards.component.spec.ts  forwards.component.ts
bsrouter/gui/src/app/log/: log.component.css  log.component.html  log.component.spec.ts  log.component.ts
bsrouter/gui/src/app/nav/: nav.component.css  nav.component.html  nav.component.spec.ts  nav.component.ts
bsrouter/src/: main.rs
certs/: certs.go  certs_test.go  gen.sh
dialer/: balance.go  balance_test.go  bash.go  bash_darwin.go  bash_test.go  bash_windows.go  cmd.go  cmd_darwin.go  cmd_linux.go  cmd_test.go  cmd_windows.go  dailer_test.go  dialer_test.go  dilaer.go  dnsgw.go  dnsgw_test.go  echo.go  echo_test.go  key.go  key_test.go  log.go  log_test.go  schema.go  schema_test.go  socks5.go  socks5_test.go  ssh.go  ssh_darwin.go  ssh_linux.go  ssh_test.go  ssh_windows.go  state.go  state_test.go  tcp.go  tcp_test.go  udpgw.go  udpgw_test.go  util.go  util_test.go  web.go  (+1 more)
gfw/: abp.go  gfw.go  gfw_test.go  user_rules.txt
router/: Cargo.toml  README.md  bsck.go  bsck_test.go  console.go  console_test.go  forward.go  forward_test.go  log.go  log_test.go  node.go  node_test.go  proxy.go  proxy_test.go  router.go  router_test.go  service.go  service_test.go  test-slaver.json  whitelist.txt
router/examples/: tunsend.rs
router/native/: native.go  proxy_darwin.go  proxy_linux.go  proxy_windows.go
router/src/: frame.rs  gateway.rs  lib.rs  log.rs  proxy.rs  relay.rs  router.rs  service.rs  util.rs  wrapper.rs
router/tests/: forward.go  forward_test.go  forward_test.rs  wrapper_test.rs
test/: test.go
(+24 files in other folders)
