[package]
name = "bind"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.96"
router = { version = "0.1.0", path = "../router" }

[lib]
name = "router"
crate-type = ["staticlib"]