[package]
name = "bsrouter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json = "0.12.4"
log = "0.4.18"
rand = "0.8.5"
router = { version = "0.1.0", path = "../router" }
serde_json = "1.0.96"
smoltcp = { version = "0.9.1", path = "../../smoltcp" }
tokio = "1.28.1"
tokio-fd = "0.3.0"
tun = "0.5.5"


[profile.dev]
panic = 'abort'

[profile.release]
panic = 'abort'
