[package]
name = "router"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
bytes = "1.4.0"
chrono = "0.4.24"
futures = "0.3.28"
hex = "0.4.3"
http-body-util = "0.1.0-rc.2"
hyper = { version = "1.0.0-rc.3", features = ["full"] }
json = "0.12.4"
libc = "0.2.144"
log = "0.4.17"
pem = "2.0.1"
quinn = "0.10.1"
rustls =  { version = "0.21.1", features = ["dangerous_configuration"] }
rustls-native-certs = "0.6.2"
socks5-server = "0.8.3"
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.24.0"
tokio-util = "0.7.8"
walkdir = "2.3.3"
wg = "0.3.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.96"
rustls-pemfile = "1.0.2"
webpki = { package = "rustls-webpki", version = "0.100.0", features = ["alloc", "std"] }
webpki-roots = "0.23.0"
tun = "0.5.5"
smoltcp = { version = "0.9.1", path = "../../smoltcp" }

[dev-dependencies]
tokio-pipe = "0.2.12"
